cmake_minimum_required(VERSION 3.13)
project(semester_1-hw_1)
set (CMAKE_CXX_STANDARD 17)

add_subdirectory(hw_1-lv_1-ex_15)
add_subdirectory(hw_1-lv_1-ex_16)
add_subdirectory(hw_1-lv_1-ex_18)
add_subdirectory(hw_1-lv_1-ex_4)
add_subdirectory(hw_1-lv_1-ex_4-nopow)
add_subdirectory(hw_1-lv_1-ex_9)
add_subdirectory(hw_1-lv_2-ex_2)
add_subdirectory(hw_1-lv_2-ex_4)
add_subdirectory(hw_1-lv_2-ex_7)
add_subdirectory(hw_1-lv_3-ex_1)
add_subdirectory(hw_1-lv_3-ex_3)
