cmake_minimum_required(VERSION 3.13)
project(semester_1-hw_4)
set (CMAKE_CXX_STANDARD 17)

add_subdirectory(hw_4-lv_1-ex_12)
add_subdirectory(hw_4-lv_1-ex_13)
add_subdirectory(hw_4-lv_1-ex_13-old)
add_subdirectory(hw_4-lv_1-ex_17)
add_subdirectory(hw_4-lv_1-ex_29)
add_subdirectory(hw_4-lv_1-ex_3)
add_subdirectory(hw_4-lv_1-ex_31)
add_subdirectory(hw_4-lv_1-ex_6)
add_subdirectory(hw_4-lv_2-ex_7)
add_subdirectory(hw_4-lv_2-ex_8)
add_subdirectory(hw_4-lv_2-ex_9)
add_subdirectory(hw_4-lv_3-ex_1)
add_subdirectory(hw_4-lv_3-ex_10)
add_subdirectory(hw_4-lv_3-ex_11)
add_subdirectory(hw_4-lv_3-ex_2)
add_subdirectory(hw_4-lv_3-ex_3)
add_subdirectory(hw_4-lv_3-ex_4)
add_subdirectory(hw_4-lv_3-ex_8)
