cmake_minimum_required(VERSION 3.13)
project(semester_1-hw_3-new)
set (CMAKE_CXX_STANDARD 17)

add_subdirectory(hw_3-lv_1-ex_10)
add_subdirectory(hw_3-lv_1-ex_11)
add_subdirectory(hw_3-lv_1-ex_12)
add_subdirectory(hw_3-lv_1-ex_13)
add_subdirectory(hw_3-lv_1-ex_6)
add_subdirectory(hw_3-lv_2-ex_10)
add_subdirectory(hw_3-lv_2-ex_11)
add_subdirectory(hw_3-lv_2-ex_13)
add_subdirectory(hw_3-lv_2-ex_15)
add_subdirectory(hw_3-lv_2-ex_5)
add_subdirectory(hw_3-lv_2-ex_6)
add_subdirectory(hw_3-lv_3-ex_1)
add_subdirectory(hw_3-lv_3-ex_12)
add_subdirectory(hw_3-lv_3-ex_13)
add_subdirectory(hw_3-lv_3-ex_5)
add_subdirectory(hw_3-lv_3-ex_8)
add_subdirectory(hw_3-lv_3-ex_9)
